--- a/DemoAuroraServerlessBeanstalkNetCore/appsettings.json
+++ b/DemoAuroraServerlessBeanstalkNetCore/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LocalConnection": "server=localhost;port=3306;user=vinhloc1996;password=Fifaonline20;database=Aurora",
+    "AuroraConnection": "server=test.cluster-cczqtpacyzjx.ap-southeast-1.rds.amazonaws.com;port=3306;user=vinhloc1996;password=Fifaonline20;database=Aurora"
+  }
 }
